--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,4 @@
 {
   "root": true,
-  "extends": ["custom"],
-  "settings": {
-    "next": {
-      "rootDir": ["apps/*/"]
-    }
-  }
+  "extends": ["custom"]
 }
