--- a/apps/api/.eslintrc
+++ b/apps/api/.eslintrc
@@ -1,4 +1,13 @@
 {
   "root": true,
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
   "extends": ["custom-server"]
 }
