--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,15 +10,17 @@
     "start": "node dist/index.js",
     "test": "jest --detectOpenHandles"
   },
-  "jest": {
-    "preset": "jest-presets/jest/node"
-  },
   "dependencies": {
+    "@line/bot-sdk": "^7.5.2",
+    "axios": "^1.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "logger": "*",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.7.2",
+    "morgan": "^1.10.0",
+    "qs": "^6.11.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@swc/core": "^1.3.18",
@@ -28,13 +30,11 @@
     "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.2",
+    "@types/qs": "^6.9.7",
     "@types/supertest": "^2.0.12",
     "eslint": "^7.32.0",
-    "eslint-config-custom-server": "*",
     "jest": "^26.6.3",
-    "jest-presets": "*",
     "supertest": "^6.2.4",
-    "tsconfig": "workspace:*",
     "tsup": "^6.2.3",
     "typescript": "^4.8.3"
   }
