--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "outDir": "./dist",
     "rootDir": "./src",
-    "declaration": false,
-    "declarationMap": false,
-    "strict": true
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
   },
   "exclude": ["node_modules"],
-  "extends": "tsconfig/base.json",
   "include": ["src"]
 }
