--- a/.dockerignore
+++ b/.dockerignore
@@ -24,6 +24,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,5 +33,5 @@ yarn-error.log*
 # turbo
 .turbo
 
+# build
 dist
-.env
