--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -34,6 +34,8 @@ jobs:
           file: ./apps/web/Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-web:latest
+          build-args: |
+            NEXT_PUBLIC_API_BASE_URL=/api
 
       - name: Build and push API Docker image
         uses: docker/build-push-action@v3
