--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -40,7 +40,7 @@ jobs:
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-web:latest
           build-args: |
-            NEXT_PUBLIC_API_BASE_URL=${{ inputs:API_URL_WITH_PREFIX}}
+            NEXT_PUBLIC_API_BASE_URL=${{ inputs.API_URL_WITH_PREFIX}}
 
       - name: Build and push API Docker image
         uses: docker/build-push-action@v3
