--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,16 @@
     "dev": "tsup src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "start": "node dist/index.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-presets/jest/node",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "~/(.*)": "<rootDir>/src/$1"
+    },
+    "resetMocks": false,
+    "collectCoverage": true
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
@@ -34,7 +43,11 @@
     "@types/supertest": "^2.0.12",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "jest-mock-axios": "4.7.0-beta2",
+    "jest-presets": "*",
+    "mockingoose": "^2.15.2",
     "supertest": "^6.2.4",
+    "ts-jest": "^26.5.6",
     "tsup": "^6.2.3",
     "typescript": "^4.8.3"
   }
