--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,6 +7,11 @@
     "rootDir": "./src",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
   "exclude": ["node_modules"],
   "include": ["src"]
