--- a/.github/workflows/api_coverage_test.yml
+++ b/.github/workflows/api_coverage_test.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Running API test
+        run: pnpm --filter=api test
+
       - name: Generate API test coverage report
         uses: ArtiomTr/jest-coverage-report-action@v2
         id: coverage
