--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "dev": "tsup src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest --json --outputFile=\"coverage-report.json\""
   },
   "jest": {
     "preset": "jest-presets/jest/node",
@@ -17,7 +17,8 @@
       "~/(.*)": "<rootDir>/src/$1"
     },
     "resetMocks": false,
-    "collectCoverage": true
+    "collectCoverage": true,
+    "coverageProvider": "v8"
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
