--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "dev": "tsup src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "start": "node dist/index.js",
-    "test": "jest --json --outputFile=\"coverage-report.json\""
+    "test": "jest --coverage --json --outputFile=\"coverage-report.json\""
   },
   "jest": {
     "preset": "jest-presets/jest/node",
