--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^18.0.7",
     "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "^10.4.13",
+    "cypress": "^11.1.0",
     "eslint": "7.32.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.19",
