--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
+    "start": {
+      "dependsOn": ["build"]
+    },
     "lint": {
       "outputs": []
     },
