--- a/.github/workflows/web_coverage_test.yml
+++ b/.github/workflows/web_coverage_test.yml
@@ -43,14 +43,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
-      # - name: Install dependencies
-      #   run: pnpm install
-
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          # install: false
+          install-command: pnpm install
           build: pnpm --filter=web build
           start: pnpm --filter=web start
           wait-on: 'http://localhost:3000'
-          working-directory: apps/web
+          command: pnpm --filter=web cypress:run
