--- a/.github/workflows/web_coverage_test.yml
+++ b/.github/workflows/web_coverage_test.yml
@@ -38,15 +38,20 @@ jobs:
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          path: |
+            ~/.cache/Cypress
+            ${{ steps.pnpm-cache.outputs.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          install-command: pnpm install
+          install: false
           build: pnpm --filter=web build
           start: pnpm --filter=web start
           wait-on: 'http://localhost:3000'
