--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "cypress:install": "cypress install",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
