--- a/.github/workflows/build_web_images.yml
+++ b/.github/workflows/build_web_images.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - '!apps/**'
       - 'apps/web/**'
+      - '!.github/**'
+      - '.github/workflows/build_web_images.yml'
   workflow_dispatch:
 
 env:
