--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "cypress:install": "cypress install",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "test": "cypress run"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
