--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,8 @@
     "dev": "tsup src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "start": "node dist/index.js",
-    "test": "jest --coverage --json --outputFile=\"coverage-report.json\""
+    "test": "jest --coverage --json --outputFile=\"coverage-report.json\"",
+    "test:jest": "jest --watch"
   },
   "jest": {
     "preset": "jest-presets/jest/node",
@@ -33,6 +34,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.1",
     "@swc/core": "^1.3.18",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.10",
