--- a/.github/workflows/web_coverage_test.yml
+++ b/.github/workflows/web_coverage_test.yml
@@ -57,6 +57,7 @@ jobs:
         uses: cypress-io/github-action@v4.2.0
         with:
           install: false
+          build: pnpm build
           start: pnpm start
           wait-on: 'http://localhost:3000'
           command: npx cypress run
