--- a/.github/workflows/web_coverage_test.yml
+++ b/.github/workflows/web_coverage_test.yml
@@ -36,7 +36,6 @@ jobs:
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
@@ -46,18 +45,21 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
         run: pnpm install
 
       - name: Install Cypress
         run: pnpm --filter=web cypress:install
 
+      - name: Build Web
+        run: pnpm --filter=web build
+        env:
+          NEXT_PUBLIC_API_BASE_URL: http://localhost:5001/api
+
       - name: Cypress run
         uses: cypress-io/github-action@v4.2.0
         with:
           install: false
-          build: pnpm build
           start: pnpm start
           wait-on: 'http://localhost:3000'
           command: npx cypress run
