--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.7.2",
