--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "node-schedule": "^2.1.0",
     "qs": "^6.11.0",
     "zod": "^3.19.1"
   },
@@ -43,6 +44,7 @@
     "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.2",
+    "@types/node-schedule": "^2.1.0",
     "@types/qs": "^6.9.7",
     "@types/supertest": "^2.0.12",
     "eslint": "^7.32.0",
