--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,11 +24,11 @@
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
     "axios": "^1.1.3",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
@@ -37,24 +37,25 @@
   },
   "devDependencies": {
     "@jest-mock/express": "^2.0.1",
-    "@swc/core": "^1.3.18",
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.22",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^15.12.2",
+    "@jest/globals": "^29.3.1",
+    "@swc/core": "^1.3.19",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.9",
     "@types/node-schedule": "^2.1.0",
     "@types/qs": "^6.9.7",
     "@types/supertest": "^2.0.12",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "eslint": "^8.28.0",
+    "jest": "^29.3.1",
     "jest-mock-axios": "4.7.0-beta2",
     "jest-presets": "*",
     "mockingoose": "^2.15.2",
-    "supertest": "^6.2.4",
-    "ts-jest": "^26.5.6",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.3"
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3"
   }
 }
