--- a/apps/web/.eslintrc
+++ b/apps/web/.eslintrc
@@ -1,4 +1,9 @@
 {
   "root": true,
-  "extends": ["custom"]
+  "extends": ["next", "custom"],
+  "rules": {
+    "@next/next/no-img-element": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-console": "off"
+  }
 }
