--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "prettier": "latest",
-    "turbo": "latest"
+    "eslint-config-custom": "workspace:0.0.0",
+    "prettier": "^2.7.1",
+    "turbo": "^1.6.3"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "pnpm@7.15.0"
 }
