--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,15 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@antfu/eslint-config": "^0.31.0",
-    "eslint": "^7.23.0",
-    "eslint-config-next": "13.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-turbo": "latest",
-    "eslint-plugin-react": "7.31.8"
+    "@antfu/eslint-config-ts": "^0.31.0",
+    "eslint": "^8.28.0",
+    "eslint-config-next": "13.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-turbo": "^0.0.4",
+    "eslint-plugin-react": "7.31.11"
   },
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.3"
   },
   "publishConfig": {
     "access": "public"
