--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "$NEXT_PUBLIC_API_BASE_URL", "$NODE_ENV"],
       "outputs": ["dist/**", ".next/**"]
     },
     "start": {
