--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.6",
+    "i18next": "^22.0.6",
     "joi": "^17.7.0",
     "mini-css-extract-plugin": "^2.7.0",
     "next": "13.0.4",
