--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,18 +8,9 @@
     "dev": "tsup src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "start": "node dist/index.js",
+    "jest": "jest --coverage --ci",
     "test": "jest --coverage --json --outputFile=\"coverage-report.json\"",
     "test:jest": "jest --watch"
-  },
-  "jest": {
-    "preset": "jest-presets/jest/node",
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "~/(.*)": "<rootDir>/src/$1"
-    },
-    "resetMocks": false,
-    "collectCoverage": true,
-    "coverageProvider": "v8"
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
@@ -55,6 +46,7 @@
     "mockingoose": "^2.15.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
